# linsen-pdf-extractor

./: Cargo.toml  LICENSE  Readme.md  bindings.json  build.ts  main.ts  mod.ts
assets/: generated.txt
linsen-pdf-extractor/: Cargo.toml
linsen-pdf-extractor/src/: ffi.rs  lib.rs  parse.rs
pkg/: linsen_pdf_extractor.d.ts  linsen_pdf_extractor.js  linsen_pdf_extractor_bg.wasm  linsen_pdf_extractor_bg.wasm.d.ts
src/: lib.rs  parse.rs  pdf.rs
