[package]
name = "linsen-pdf-extractor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.55"
chrono = { version = "0.4.19", features = ["serde"] }
deno_bindgen = "0.5.0"
lopdf = "0.27.0"
nom = "7.1.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
